# bibtex2cff

./: .gitignore  .pre-commit-config.yaml  .sourcery.toml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  poetry.toml  pyproject.toml
.github/: labeler.yml
.github/workflows/: python-package.yml
src/bibtex2cff/: __init__.py  cmd.py  convert_cff.py  definitions.py
src/test/: __init__.py  test_cmd.py  test_convert_cff.py  test_definitions.py
src/test/examples/: citation.cff  initial_realase.bib  misc.bib  misc_2.bib  software.bib
